--- a/assignment3.ipynb
+++ b/assignment3.ipynb
@@ -1043,7 +1043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
@@ -1229,6 +1229,42 @@
       "    accuracy                           0.49       120\n",
       "   macro avg       0.47      0.49      0.47       120\n",
       "weighted avg       0.47      0.49      0.47       120\n",
+      "\n",
+      "Concatenated SVM Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       1.00      1.00      1.00        30\n",
+      "           1       1.00      1.00      1.00        30\n",
+      "           2       1.00      1.00      1.00        30\n",
+      "           3       1.00      1.00      1.00        30\n",
+      "\n",
+      "    accuracy                           1.00       120\n",
+      "   macro avg       1.00      1.00      1.00       120\n",
+      "weighted avg       1.00      1.00      1.00       120\n",
+      "\n",
+      "Concatenated NBY Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       1.00      1.00      1.00        30\n",
+      "           1       1.00      0.97      0.98        30\n",
+      "           2       0.97      1.00      0.98        30\n",
+      "           3       1.00      1.00      1.00        30\n",
+      "\n",
+      "    accuracy                           0.99       120\n",
+      "   macro avg       0.99      0.99      0.99       120\n",
+      "weighted avg       0.99      0.99      0.99       120\n",
+      "\n",
+      "Concatenated RFR Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.94      1.00      0.97        30\n",
+      "           1       1.00      0.93      0.97        30\n",
+      "           2       1.00      1.00      1.00        30\n",
+      "           3       1.00      1.00      1.00        30\n",
+      "\n",
+      "    accuracy                           0.98       120\n",
+      "   macro avg       0.98      0.98      0.98       120\n",
+      "weighted avg       0.98      0.98      0.98       120\n",
       "\n"
      ]
     }
@@ -1269,7 +1305,14 @@
     "print('Melspectrogram NBY Report:')\n",
     "print(classification_report(test_df['emotion'].astype('int'), melsp_nby_pred, zero_division=True))\n",
     "print('Melspectrogram RFR Report:')\n",
-    "print(classification_report(test_df['emotion'].astype('int'), melsp_rfr_pred, zero_division=True))"
+    "print(classification_report(test_df['emotion'].astype('int'), melsp_rfr_pred, zero_division=True))\n",
+    "\n",
+    "print('Concatenated SVM Report:')\n",
+    "print(classification_report(test_df['emotion'].astype('int'), all_svm_pred, zero_division=True))\n",
+    "print('Concatenated NBY Report:')\n",
+    "print(classification_report(test_df['emotion'].astype('int'), all_nby_pred, zero_division=True))\n",
+    "print('Concatenated RFR Report:')\n",
+    "print(classification_report(test_df['emotion'].astype('int'), all_rfr_pred, zero_division=True))"
    ]
   }
  ],
