--- a/assignment3.ipynb
+++ b/assignment3.ipynb
@@ -880,17 +880,17 @@
    ],
    "source": [
     "# train models with mfccs\n",
-    "svm_model.fit(np.array(train_features_scaled)[:,[1,12]], train_df['emotion'].astype('int'))\n",
-    "nby_model.fit(np.array(train_features_scaled)[:,[1,12]], train_df['emotion'].astype('int'))\n",
-    "rfr_model.fit(np.array(train_features_scaled)[:,[1,12]], train_df['emotion'].astype('int'))\n",
+    "svm_model.fit(np.array(train_features_scaled)[:,1:12], train_df['emotion'].astype('int'))\n",
+    "nby_model.fit(np.array(train_features_scaled)[:,1:12], train_df['emotion'].astype('int'))\n",
+    "rfr_model.fit(np.array(train_features_scaled)[:,1:12], train_df['emotion'].astype('int'))\n",
     "\n",
-    "score = svm_model.score(np.array(test_features_scaled)[:,[1,12]], test_df['emotion'].astype('int'))\n",
-    "score2 = nby_model.score(np.array(test_features_scaled)[:,[1,12]], test_df['emotion'].astype('int'))\n",
-    "score3 = rfr_model.score(np.array(test_features_scaled)[:,[1,12]], test_df['emotion'].astype('int'))\n",
+    "score = svm_model.score(np.array(test_features_scaled)[:,1:12], test_df['emotion'].astype('int'))\n",
+    "score2 = nby_model.score(np.array(test_features_scaled)[:,1:12], test_df['emotion'].astype('int'))\n",
+    "score3 = rfr_model.score(np.array(test_features_scaled)[:,1:12], test_df['emotion'].astype('int'))\n",
     "\n",
-    "mfccs_svm_pred = svm_model.predict(np.array(test_features_scaled)[:,[1,12]])\n",
-    "mfccs_nby_pred = nby_model.predict(np.array(test_features_scaled)[:,[1,12]])\n",
-    "mfccs_rfr_pred = rfr_model.predict(np.array(test_features_scaled)[:,[1,12]])\n",
+    "mfccs_svm_pred = svm_model.predict(np.array(test_features_scaled)[:,1:12])\n",
+    "mfccs_nby_pred = nby_model.predict(np.array(test_features_scaled)[:,1:12])\n",
+    "mfccs_rfr_pred = rfr_model.predict(np.array(test_features_scaled)[:,1:12])\n",
     "\n",
     "print(f'SVM model score: {100*score:.2f}%')\n",
     "print(f'NBY model score: {100*score2:.2f}%')\n",
@@ -948,17 +948,17 @@
    ],
    "source": [
     "# train models with chroma\n",
-    "svm_model.fit(np.array(train_features_scaled)[:,[14,25]], train_df['emotion'].astype('int'))\n",
-    "nby_model.fit(np.array(train_features_scaled)[:,[14,25]], train_df['emotion'].astype('int'))\n",
-    "rfr_model.fit(np.array(train_features_scaled)[:,[14,25]], train_df['emotion'].astype('int'))\n",
+    "svm_model.fit(np.array(train_features_scaled)[:,14:25], train_df['emotion'].astype('int'))\n",
+    "nby_model.fit(np.array(train_features_scaled)[:,14:25], train_df['emotion'].astype('int'))\n",
+    "rfr_model.fit(np.array(train_features_scaled)[:,14:25], train_df['emotion'].astype('int'))\n",
     "\n",
-    "score = svm_model.score(np.array(test_features_scaled)[:,[14,25]], test_df['emotion'].astype('int'))\n",
-    "score2 = nby_model.score(np.array(test_features_scaled)[:,[14,25]], test_df['emotion'].astype('int'))\n",
-    "score3 = rfr_model.score(np.array(test_features_scaled)[:,[14,25]], test_df['emotion'].astype('int'))\n",
+    "score = svm_model.score(np.array(test_features_scaled)[:,14:25], test_df['emotion'].astype('int'))\n",
+    "score2 = nby_model.score(np.array(test_features_scaled)[:,14:25], test_df['emotion'].astype('int'))\n",
+    "score3 = rfr_model.score(np.array(test_features_scaled)[:,14:25], test_df['emotion'].astype('int'))\n",
     "\n",
-    "chroma_svm_pred = svm_model.predict(np.array(test_features_scaled)[:,[14,25]])\n",
-    "chroma_nby_pred = nby_model.predict(np.array(test_features_scaled)[:,[14,25]])\n",
-    "chroma_rfr_pred = rfr_model.predict(np.array(test_features_scaled)[:,[14,25]])\n",
+    "chroma_svm_pred = svm_model.predict(np.array(test_features_scaled)[:,14:25])\n",
+    "chroma_nby_pred = nby_model.predict(np.array(test_features_scaled)[:,14:25])\n",
+    "chroma_rfr_pred = rfr_model.predict(np.array(test_features_scaled)[:,14:25])\n",
     "\n",
     "print(f'SVM model score: {100*score:.2f}%')\n",
     "print(f'NBY model score: {100*score2:.2f}%')\n",
@@ -982,17 +982,17 @@
    ],
    "source": [
     "# train models with mel spectro\n",
-    "svm_model.fit(np.array(train_features_scaled)[:,[26,37]], train_df['emotion'].astype('int'))\n",
-    "nby_model.fit(np.array(train_features_scaled)[:,[26,37]], train_df['emotion'].astype('int'))\n",
-    "rfr_model.fit(np.array(train_features_scaled)[:,[26,37]], train_df['emotion'].astype('int'))\n",
+    "svm_model.fit(np.array(train_features_scaled)[:,26:37], train_df['emotion'].astype('int'))\n",
+    "nby_model.fit(np.array(train_features_scaled)[:,26:37], train_df['emotion'].astype('int'))\n",
+    "rfr_model.fit(np.array(train_features_scaled)[:,26:37], train_df['emotion'].astype('int'))\n",
     "\n",
-    "score = svm_model.score(np.array(test_features_scaled)[:,[26,37]], test_df['emotion'].astype('int'))\n",
-    "score2 = nby_model.score(np.array(test_features_scaled)[:,[26,37]], test_df['emotion'].astype('int'))\n",
-    "score3 = rfr_model.score(np.array(test_features_scaled)[:,[26,37]], test_df['emotion'].astype('int'))\n",
+    "score = svm_model.score(np.array(test_features_scaled)[:,26:37], test_df['emotion'].astype('int'))\n",
+    "score2 = nby_model.score(np.array(test_features_scaled)[:,26:37], test_df['emotion'].astype('int'))\n",
+    "score3 = rfr_model.score(np.array(test_features_scaled)[:,26:37], test_df['emotion'].astype('int'))\n",
     "\n",
-    "melsp_svm_pred = svm_model.predict(np.array(test_features_scaled)[:,[26,37]])\n",
-    "melsp_nby_pred = nby_model.predict(np.array(test_features_scaled)[:,[26,37]])\n",
-    "melsp_rfr_pred = rfr_model.predict(np.array(test_features_scaled)[:,[26,37]])\n",
+    "melsp_svm_pred = svm_model.predict(np.array(test_features_scaled)[:,26:37])\n",
+    "melsp_nby_pred = nby_model.predict(np.array(test_features_scaled)[:,26:37])\n",
+    "melsp_rfr_pred = rfr_model.predict(np.array(test_features_scaled)[:,26:37])\n",
     "\n",
     "print(f'SVM model score: {100*score:.2f}%')\n",
     "print(f'NBY model score: {100*score2:.2f}%')\n",
